--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,24 @@
     <string name="app_name">Developers</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_new_developer">Add New Developer</string>
+    <string name="developer_name">Developer Name</string>
+    <string name="fresh">Fresh</string>
+    <string name="junior">Junior</string>
+    <string name="mid">Mid</string>
+    <string name="senior">Senior</string>
+    <string name="salary">Salary</string>
+    <string name="bonus">Bonus</string>
+    <string name="medical_insurance">Medical Insurance</string>
+    <string name="social_insurance">Social Insurance</string>
+    <string name="vacation">vacation</string>
+    <string name="absence">Absence</string>
+    <string name="add_developer">Add Developer</string>
+    <string name="log_out">Log Out</string>
+    <string name="e_mail">E-mail</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="i_don_t_have_an_account">I don\'t have an account</string>
+    <string name="register">Register</string>
+    <string name="already_have_an_account">Already have an account?</string>
 </resources>
